# deftpy

./: .gitignore  README.md  crystal.py  deftpy.ipynb  pyproject.toml  test.py  test2.py
analysis/: BV_scratch.py  Kumagai_binary_clean.csv  Kumagai_complete_with_vr.csv  Kumagai_ternaries_min.csv  complete_df_indexed.csv  corr.py  crystal_analysis.py  getting_indexes.py  graphing_kumagai.py  graphing_witman.py  kumagai_Eb_Vr.csv  kumagai_Vr_Eb_full.csv  kumagai_Vr_Eb_full_frac.csv  kumagai_analysis.py  kumagai_analysis_clean.py  kumagai_binary_Eb_frac_Vr_from_csv.csv  kumagai_ternary_vr_from_csv.csv  mk1_kumagai.py  mk1_witman.py  out_complete  valence_data_full.csv  witman_analysis.py
data/features/: Ehull.csv  Vr.csv
data/outputs/: Kumagai_full.csv  Kumagai_ternaries.csv  Kumagai_ternaries_max.csv  kumagai_Eb_Vr_frac.csv  kumagai_binary_Eb_BV_Vr_from_csv.csv  kumagai_full_vrmax_nan.csv  kumagai_ternary_vrmax_nan.csv
data/papers/kumagai/oxygen_vacancies_db_data/Li2O/: Li2O_Va_O1_0.vesta  Li2O_Va_O1_1.vesta  Li2O_Va_O1_2.vesta  bulk_visual_data.json  chem_pot_diag.json  defect_visual_data.json
data/papers/kumagai/site_info/Ag2BiO3/: cell_info.txt  supercell.cif
data/papers/kumagai/site_info/Ag2HgO2/: cell_info.txt  supercell.cif
data/papers/kumagai/site_info/AgAuO2/: cell_info.txt  supercell.cif
data/papers/kumagai/site_info/Al2Ge2O7/: cell_info.txt  supercell.cif
data/papers/kumagai/site_info/Al2O3/: cell_info.txt  supercell.cif
data/papers/kumagai/site_info/Al2PbO4/: cell_info.txt  (+1 more)
data/papers/witman/figures/: witman_data_cleanup.csv
data/test_files/: 4166149.vasp  ICSD_CeO2_CIF.cif  OQMD_CaTiO3_POSCAR.txt  OQMD_CeO2_POSCAR.txt
mk1/: README.md  mk1.py  test.py  testttest.py
mk1/crystal_files/: CaTiO3.cif  CaTiO3_POSCAR.txt  CeO2_POSCAR.txt  OQMD_HfO2_POSCAR.txt  df_struc.csv  test.csv
mk2/: mk2.py
test_files/: ICSD_HfO2_CIF.cif  OQMD_CaTiO3_POSCAR.txt  df_struc.csv
tests/: test_crystal_analysis.py  test_data_processing.py
utils/: BV_scratch.py  corr.py  data_processing.py  graphing_kumagai.py
(+1862 files in other folders)
