[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deftpy"
version = "0.1.0"
description = "A computational materials chemistry project"
authors = [{name = "Your Name"}]
license = "MIT"
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.19",
    "pandas>=1.1",
    "pymatgen>=2022.0.0",
    "ase>=3.21",
    "pytest>=6.0"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
