[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = deftpy"
version = "0.1.0"
description = "INSERT GREAT DESCRIPTION HERE."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["materials-science", "data-processing", "pymatgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pymatgen>=2022.0.17",
    "tqdm>=4.62.0"
]

[project.urls]
homepage = "https://example.com/project-homepage"
repository = "https://example.com/project-repo"
documentation = "https://example.com/project-docs"

[tool.setuptools]
packages = ["materials_data_processing"]
install_requires = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pymatgen>=2022.0.17",
    "tqdm>=4.62.0"
]